--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "TypeScript Plugin for Appcd Webpack",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "yarn run lint"
   },
   "keywords": [
     "titanium",
