--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "access": "public"
   },
   "files": [
-    "index.js"
+    "index.js",
+    "utils.js"
   ],
   "engines": {
     "node": ">=10.0.0"
